# genai-gateway

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 20260312_000001_initial_schema.py  20260313_000002_request_eval_fields.py  20260317_000003_routing_fields.py  20260317_000004_response_eval_fields.py  20260317_000005_tracing_and_cost_fields.py  20260318_000006_reranker_fields.py  20260318_000007_variable_embedding_vectors.py  20260326_000008_hybrid_retrieval_fts_index.py  (+3 more)
app/: main.py
app/api/: query.py
apps/: __init__.py
dashboard/: app.py
database/: __init__.py  models.py  repositories.py  session.py
docs/: architecture.md  learning-notes-database-stack.md  retrieval-evaluation.md
evaluation_dataset/: legal_qa_retrieval_samples.jsonl  sample_questions.json
ingestion/: chunking.py  embeddings.py  legal_parser.py  load_documents.py  metadata.py
retrieval_evaluation/: __init__.py  datasets.py  harness.py  metrics.py
scripts/: compare_retrieval_eval_reports.py  generate_retrieval_eval_dataset.py  ingest_legal_document.py  reset_request_history.py  review_retrieval_eval_dataset.py  run_experiment.py  run_retrieval_eval.py  run_retrieval_eval_matrix.sh  run_retrieval_reranker_eval_matrix.sh  seed_demo_requests.py
tests/: test_agent_runtime.py  test_bm25_retrieval.py  test_guardrails.py  test_openrouter_provider.py  test_request_logger.py  test_reranker.py  test_retrieval_evaluation.py  test_retrieval_review.py  test_retriever.py  test_tei_provider.py
(+129 files in other folders)
